# This file is part of FLIMEvents
# Copyright 2019-2022 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

public_cpp_headers = files(
    'apply_class_template.hpp',
    'autocopy_span.hpp',
    'bh_spc.hpp',
    'binning.hpp',
    'broadcast.hpp',
    'buffer.hpp',
    'common.hpp',
    'count.hpp',
    'delay_hasten.hpp',
    'discard.hpp',
    'event_set.hpp',
    'flimevt.hpp',
    'gate.hpp',
    'generate_timings.hpp',
    'histogram.hpp',
    'histogram_elementwise.hpp',
    'histogram_events.hpp',
    'legacy_histogram.hpp',
    'line_clock_pixellator.hpp',
    'merge.hpp',
    'picoquant_t3.hpp',
    'pixel_photon_events.hpp',
    'read_bytes.hpp',
    'ref_processor.hpp',
    'route_by_channel.hpp',
    'span.hpp',
    'split.hpp',
    'swabian_tag.hpp',
    'test_utils.hpp',
    'time_delay.hpp',
    'time_tagged_events.hpp',
    'translate_marker.hpp',
    'type_erased_processor.hpp',
    'vector_queue.hpp',
)

install_headers(public_cpp_headers, subdir: 'libtcspc')
