# This file is part of libtcspc
# Copyright 2019-2023 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

public_cpp_headers = files(
    'apply_class_template.hpp',
    'autocopy_span.hpp',
    'bh_spc.hpp',
    'binning.hpp',
    'broadcast.hpp',
    'buffer.hpp',
    'common.hpp',
    'count.hpp',
    'delay.hpp',
    'delay_hasten.hpp',
    'event_set.hpp',
    'fit_sequence.hpp',
    'gate.hpp',
    'generate.hpp',
    'histogram.hpp',
    'histogram_elementwise.hpp',
    'histogram_events.hpp',
    'legacy_histogram.hpp',
    'line_clock_pixellator.hpp',
    'match.hpp',
    'merge.hpp',
    'npint.hpp',
    'pair.hpp',
    'picoquant_t3.hpp',
    'pixel_photon_events.hpp',
    'read_bytes.hpp',
    'recover_order.hpp',
    'ref_processor.hpp',
    'route.hpp',
    'select.hpp',
    'shared_processor.hpp',
    'span.hpp',
    'split.hpp',
    'stop.hpp',
    'swabian_tag.hpp',
    'tcspc.hpp',
    'test_utils.hpp',
    'time_correlate.hpp',
    'time_tagged_events.hpp',
    'type_erased_processor.hpp',
    'vector_queue.hpp',
)

install_headers(public_cpp_headers, subdir: 'libtcspc')
