# This file is part of libtcspc
# Copyright 2019-2023 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

public_cpp_headers = files(
    'apply_class_template.hpp',
    'autocopy_span.hpp',
    'bh_spc.hpp',
    'binning.hpp',
    'buffer.hpp',
    'check.hpp',
    'common.hpp',
    'count.hpp',
    'delay.hpp',
    'dither.hpp',
    'event_set.hpp',
    'fit_sequence.hpp',
    'gate.hpp',
    'generate.hpp',
    'histogram.hpp',
    'histogram_elementwise.hpp',
    'histogram_events.hpp',
    'match.hpp',
    'merge.hpp',
    'multiplex.hpp',
    'npint.hpp',
    'pair.hpp',
    'picoquant_t2.hpp',
    'picoquant_t3.hpp',
    'read_binary_stream.hpp',
    'read_bytes.hpp',
    'recover_order.hpp',
    'ref_processor.hpp',
    'route.hpp',
    'select.hpp',
    'shared_processor.hpp',
    'span.hpp',
    'split.hpp',
    'stop.hpp',
    'swabian_tag.hpp',
    'tcspc.hpp',
    'test_utils.hpp',
    'time_correlate.hpp',
    'time_tagged_events.hpp',
    'timing_misc.hpp',
    'type_erased_processor.hpp',
    'vector_queue.hpp',
    'view_as_bytes.hpp',
    'write_binary_stream.hpp',
)

install_headers(public_cpp_headers, subdir: 'libtcspc')
